# RuntimeProfile

./: .clang-format  CMakeLists.txt  Readme.md
example/: main.cpp  profile_capture.cpp
src/Profile/: Profile.cpp  Profile.hpp  SteadyClockProfiler.hpp
tools/: profile_capture_gui.cpp
